--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>weather app</title>
 </head>
 <body>
     <div class="card">
@@ -14,22 +14,24 @@
         </div>
         <div class="weather">
             <img src="images/cloud.png" class="weather-icon">
-            <h1 class="temp">22 celicius</h1>
+            <h1 class="temp">22 °C</h1>
             <h2 class="city">Addis Ababa</h2>
             <div class="details">
                 <div class="col">
                     <img src="images/rain.png" >
                 </div>
+
                 <p class="humidity">50%</p>
                 <p>Humudity</p>
-            </div>
-        </div>
 
+            </div>
            <div class="col">
-                    <img src="images/wind.png" >
+
+                    <img src="images/cloud.png" >
+                   
                 </div>
-                <p class="wind">15 km/h</p>
-                <p>wind speed</p>
+                    <p class="wind">15 km/h</p>
+                    <p>wind speed</p>
             </div>
         </div>
     </div>
@@ -47,19 +49,18 @@ const apiUrl="https://api.openweathermap.org/data/2.5/weather?&units=metric&q="
         var data= await response.json();
         console.log(data)
         document.querySelector(".city").innerHTML = data.name;
-        document.querySelector(".temp").innerHTML =Math.round(data.main.temp) + 'celicius';
+        document.querySelector(".temp").innerHTML =Math.round(data.main.temp) + '°C';
         document.querySelector(".humidity").innerHTML =data.main.humidity + '%';
         document.querySelector(".wind").innerHTML =data.wind.speed + ' km/h';
 
         if(data.weather[0].main == "clouds"){
             weatherIcon.src="images/cloud.png";
-
         }else if(data.weather[0].main =="clear"){
             weatherIcon.src="images/clear.png";
         }else if(data.weather[0].main == "rain"){
             weatherIcon.src="images/rain.png";
-        }else if(data.weather[0].main ==""){
-
+        }else if(data.weather[0].main =="drizzle"){
+weatherIcon.src="images/drizzle.png";
         }
         document.querySelector(".weather").style.display ="block"; 
     } 
